defo fixed the modal scrollbar thing this time

--- a/cfg/themes/roar/static/roar_template/Styles/summary.css
+++ b/cfg/themes/roar/static/roar_template/Styles/summary.css
@@ -165,7 +165,7 @@ display: none;
 *******/
 
 .modal-open {
-overflow: auto!important
+padding-right: 17px;
 }
 
 .modal-lg {
